--- a/contact.html
+++ b/contact.html
@@ -1,76 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact - Efcharis House Skopelos</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
-  <style>
-    .contact-info {
-      max-width: 600px;
-      margin: 60px auto;
-      background: #2f3542;
-      padding: 40px 50px;
-      border-radius: 20px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.8);
-      color: #ccc;
-      font-size: 18px;
-      line-height: 1.7;
-      text-align: center;
-      font-weight: 500;
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Contact - Efcharis House Skopelos</title>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+<style>
+  /* same styles as above (header, nav, body, section, footer) */
+  * {
+    box-sizing: border-box;
+    margin: 0; padding: 0;
+  }
+  body {
+    background: linear-gradient(135deg, #2e2e2e, #23283b);
+    font-family: 'Montserrat', sans-serif;
+    color: #ddd;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px 20px 50px;
+  }
+  header {
+    width: 100%;
+    max-width: 1000px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #383838;
+    padding: 15px 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.8);
+    margin-bottom: 50px;
+  }
+  header h1 {
+    font-weight: 700;
+    font-size: 28px;
+    color: #eee;
+    user-select: none;
+  }
+  nav ul {
+    list-style: none;
+    display: flex;
+    gap: 25px;
+  }
+  nav ul li a {
+    text-decoration: none;
+    color: #bbb;
+    font-weight: 600;
+    padding: 8px 18px;
+    border-radius: 25px;
+    background: #454545;
+    transition: background 0.3s, color 0.3s;
+  }
+  nav ul li a:hover {
+    background: #4caf50;
+    color: white;
+  }
+  nav ul li a.active {
+    background: #4caf50;
+    color: white;
+    box-shadow: 0 0 10px #4caf50cc;
+  }
+  section {
+    width: 100%;
+    max-width: 850px;
+    margin-bottom: 60px;
+    background: #252b37;
+    border-radius: 25px;
+    padding: 40px 60px;
+    box-shadow: 0 10px 35px rgba(0, 0, 0, 0.85);
+    color: #ccc;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+  }
+  section h2 {
+    font-size: 32px;
+    color: #8fd18e;
+    margin-bottom: 30px;
+    font-weight: 700;
+    letter-spacing: 1.1px;
+  }
+  section p {
+    margin-bottom: 20px;
+    line-height: 1.7;
+  }
+  section a {
+    color: #74c274;
+    font-weight: 700;
+    text-decoration: none;
+    transition: color 0.3s ease;
+  }
+  section a:hover,
+  section a:focus {
+    color: #a7e39b;
+    text-decoration: underline;
+  }
+  footer {
+    margin-top: auto;
+    padding: 20px 0;
+    color: #888;
+    font-size: 14px;
+    text-align: center;
+    width: 100%;
+    max-width: 1000px;
+    border-top: 1px solid #444;
+    user-select: none;
+  }
+  @media (max-width: 900px) {
+    header {
+      flex-wrap: wrap;
+      gap: 15px;
+      padding: 15px 15px;
     }
-
-    .contact-info h2 {
-      color: #a5d6a7;
-      font-weight: 700;
+    nav ul {
+      gap: 15px;
+    }
+    nav ul li a {
+      font-size: 14px;
+      padding: 8px 12px;
+    }
+    section {
+      padding: 30px 25px;
+      font-size: 16px;
+    }
+    section h2 {
+      font-size: 26px;
       margin-bottom: 25px;
-      font-size: 28px;
     }
-
-    .contact-info a {
-      color: #4caf50;
-      text-decoration: none;
-      font-weight: 700;
-      transition: color 0.3s ease;
-    }
-
-    .contact-info a:hover,
-    .contact-info a:focus {
-      text-decoration: underline;
-      color: #81c784;
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
-  <header>
-    <h1>Efcharis House Skopelos</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="availability.html">Availability</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+  <h1>Efcharis House Skopelos</h1>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="availability.html">Availability</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html" class="active">Contact</a></li>
+    </ul>
+  </nav>
+</header>
 
-  <section class="contact-info" role="main">
-    <h2>Reservations & Contact</h2>
-    <p>
-      For reservations, please contact <strong>Katerina</strong> via email or phone:
-    </p>
-    <p>
-      📧 <a href="mailto:palaiologou.katerina@yahoo.gr">palaiologou.katerina@yahoo.gr</a><br />
-      📞 <a href="tel:+306945124103">+30 694 512 4103</a>
-    </p>
-    <p>
-      You can also reserve your stay through our <a href="https://airbnb.com/h/efcharis" target="_blank" rel="noopener noreferrer">Airbnb listing</a>.
-    </p>
-  </section>
+<section role="main">
+  <h2>Reservations & Contact</h2>
+  <p>
+    For reservations, please contact <strong>Katerina</strong> via email or phone:
+  </p>
+  <p>
+    📧 <a href="mailto:palaiologou.katerina@yahoo.gr">palaiologou.katerina@yahoo.gr</a><br />
+    📞 <a href="tel:+306945124103">+30 694 512 4103</a>
+  </p>
+  <p>
+    You can also reserve your stay through our <a href="https://airbnb.com/h/efcharis" target="_blank" rel="noopener noreferrer">Airbnb listing</a>.
+  </p>
+</section>
 
-  <footer>
-    <p>© 2025 Efcharis House Skopelos. All rights reserved.</p>
-  </footer>
+<footer>
+  <p>© 2025 Efcharis House Skopelos. All rights reserved.</p>
+</footer>
 </body>
 </html>
