--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +6,7 @@
 <title>Efcharis House Skopelos</title>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
 <style>
+  /* same style as below */
   * {
     box-sizing: border-box;
     margin: 0; padding: 0;
@@ -57,7 +57,11 @@
     background: #4caf50;
     color: white;
   }
-
+  nav ul li a.active {
+    background: #4caf50;
+    color: white;
+    box-shadow: 0 0 10px #4caf50cc;
+  }
   .carousel-container {
     position: relative;
     width: 850px;
@@ -90,7 +94,6 @@
   .slide img:hover {
     transform: scale(1.05);
   }
-
   .timer-wheel {
     position: absolute;
     right: 25px;
@@ -116,7 +119,6 @@
     stroke-dashoffset: 220;
     transition: stroke-dashoffset 5s linear;
   }
-
   .intro {
     max-width: 850px;
     margin-bottom: 35px;
@@ -136,7 +138,6 @@
   .intro ul {
     list-style: disc inside;
   }
-
   footer {
     margin-top: auto;
     padding: 20px 0;
@@ -147,6 +148,37 @@
     max-width: 1000px;
     border-top: 1px solid #444;
     user-select: none;
+  }
+
+  /* New section for globe image */
+  .globe-section {
+    width: 100%;
+    max-width: 850px;
+    margin-bottom: 60px;
+    background: #252b37;
+    border-radius: 25px;
+    padding: 40px 60px;
+    box-shadow: 0 10px 35px rgba(0, 0, 0, 0.85);
+    color: #ccc;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+  }
+  .globe-section h2 {
+    font-size: 32px;
+    color: #8fd18e;
+    margin-bottom: 30px;
+    font-weight: 700;
+    letter-spacing: 1.1px;
+  }
+  .globe-section p {
+    margin-bottom: 20px;
+    line-height: 1.7;
+  }
+  .globe-section img {
+    max-width: 100%;
+    border-radius: 20px;
+    margin-top: 20px;
   }
 
   @media (max-width: 900px) {
@@ -172,6 +204,14 @@
     nav ul {
       gap: 15px;
     }
+    .globe-section {
+      padding: 30px 25px;
+      font-size: 16px;
+    }
+    .globe-section h2 {
+      font-size: 26px;
+      margin-bottom: 25px;
+    }
   }
 </style>
 </head>
@@ -180,7 +220,7 @@
   <h1>Efcharis House Skopelos</h1>
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="index.html" class="active">Home</a></li>
       <li><a href="availability.html">Availability</a></li>
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="contact.html">Contact</a></li>
@@ -246,12 +286,6 @@
   <p>© 2025 Efcharis House Skopelos. All rights reserved.</p>
 </footer>
 
-<!-- Updated hotel style relaxing music -->
-<audio id="relax-music" autoplay loop>
-  <source src="hotel.mp3" type="audio/mpeg" />
-  Your browser does not support the audio element.
-</audio>
-
 <script>
   const slides = document.getElementById('slides');
   const progressCircle = document.querySelector('.progress-circle');
@@ -283,9 +317,6 @@
 
   showSlide(0);
   setInterval(nextSlide, 5000);
-
-  const music = document.getElementById('relax-music');
-  music.volume = 0.15;
 </script>
 </body>
 </html>
